# multiparser

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  pytest.ini  sitemap.xml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting.yaml  python-publish.yml  test_run_multiparser.yaml
basic_example/: index.html
builtin_parsers/: index.html
concio/: __init__.py  monitor.py  parsing.py
custom_parsers/: index.html
development/: index.html
docs/: basic_example.md  builtin_parsers.md  custom_parsers.md  development.md  file_monitor.md  how_it_works.md  index.md  installation.md  lazy_and_custom_parsing.md  tailing.md  tracking.md  tracking_and_tailing.md
examples/: index.html
file_monitor/: index.html
how_it_works/: index.html
installation/: index.html
multiparser/: __init__.py  exceptions.py  monitor.py  parsing.py  thread.py  typing.py
multiparser/parsing/: __init__.py  file.py  tail.py
search/: search_index.json
tailing/: index.html
tests/: conftest.py  test_data_parsing.py  test_monitor.py
tests/data/: example.h5  example.nml
tests/scenarios/: test_scenario_1.py  test_scenario_2.py  test_scenario_tail.py  test_scenario_track.py
tracking/: index.html
tracking_and_tailing/: index.html
