[tool.poetry]
name = "multiparser"
version = "0.1.0"
description = ""
authors = ["Kristian Zarębski <kristian.zarebski@ukaea.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
f90nml = {version = "^1.4.3", optional = true}
pandas = {version = "^2.1.1", optional = true}
toml = "^0.10.2"
pyyaml = "^6.0.1"
pyarrow = {version = "^13.0.0", optional = true}
flatdict = "^4.0.1"
loguru = "^0.7.2"

[tool.poetry.extras]
arrow = ["pyarrow", "pandas"]
fortran = ["f90nml"]

[tool.poetry.group.testing.dependencies]
pytest = "^7.4.2"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
xeger = "^0.4.0"
pytest-mock = "^3.11.1"
pandas = "^2.1.1"


[tool.poetry.group.quality.dependencies]
bandit = "^1.7.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mktestdocs = "^0.2.1"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mike = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
