[tool.poetry]
name = "multiparser"
version = "0.1.0"
description = "Multiple File Parser for monitoring and processing updates to a given set of output files."
authors = ["Kristian Zarębski <kristian.zarebski@ukaea.uk>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Typing :: Typed"
]
keywords = [
    "parsing",
    "monitoring",
    "logging"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
f90nml = {version = "^1.4.3", optional = true}
pandas = {version = "^2.1.1", optional = true}
toml = "^0.10.2"
pyyaml = "^6.0.1"
pyarrow = {version = "^13.0.0", optional = true}
flatdict = "^4.0.1"
loguru = "^0.7.2"

[tool.poetry.extras]
arrow = ["pyarrow", "pandas"]
fortran = ["f90nml"]

[tool.poetry.group.testing.dependencies]
pytest = "^7.4.2"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
xeger = "^0.4.0"
pytest-mock = "^3.11.1"
pandas = "^2.1.1"


[tool.poetry.group.quality.dependencies]
bandit = "^1.7.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mktestdocs = "^0.2.1"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mike = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
mypy = "^1.9.0"
pandas-stubs = "^2.2.1.240316"
types-toml = "^0.10.8.20240310"
types-pyyaml = "^6.0.12.20240311"
ruff = "^0.3.4"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.extend-select = ["C901"]
lint.mccabe.max-complexity = 11

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=multiparser"
testpaths = [
    "tests"
]
markers = [
    "parsing: tests of parsing functions for files",
    "monitor: tests of the file monitor",
    "scenario: tests for scenarios"
]

[tool.interrogate]
ignore-init-method = true
fail-under = 95
verbose = 1
exclude = ["docs", "tests", "multiparser/typing.py"]
